--- a/opmaak.css
+++ b/opmaak.css
@@ -4,23 +4,26 @@
     text-decoration: none;
     list-style: none;
     box-sizing: border-box;
+    
 }
+
 
 body{
     font-family: Tahoma;
     background: #f4f1de;
+    background: #F9F9F9;
 }
 
 nav{
     background: #90323d;
-    height: 120px;
+    height: 15vh;
     width: 100%;
 }
 
 label.name{
-    color: white;
+    color: #F9F9F9;
     font-size: 35px;
-    line-height: 120px;
+    line-height: 15vh;
     padding: 0 100px;
     font-weight: bold;
 }
@@ -32,28 +35,28 @@ nav ul{
 
 nav ul li{
     display: inline-block;
-    line-height: 120px;
+    line-height: 15vh;
     margin: 0 5px
 }
 
 nav ul li a{
-    color: white;
+    color: #F9F9F9;
     font-size: 17px;
     padding: 7px 13px;
     border-radius: 3px;
     text-transform: uppercase;
 }
 
-a.active, a:hover{
+nav ul li a.active, nav ul li a:hover{
     background-color: #5e0b15;
     transition: .5s;
 }
 
 .checkbtn{
     font-size: 30px;
-    color: white;
+    color: #F9F9F9;
     float: right;
-    line-height: 120px;
+    line-height: 15vh;
     margin-right: 40px;
     cursor: pointer;
     display: none;
@@ -64,52 +67,45 @@ a.active, a:hover{
     display: none;
 }
 
-@media (max-width: 952px){
-    label.name{
-        font-size: 30px;
-        padding-left: 50px;
-
-    }
-    nav ul li a{
-        font-size: 16px;
-    }
-
+footer{
+    background-color: #90323d;
+    /* height: 12vh ; */
+    padding-top: 20px;
+    padding-bottom: 20px;
+    color: #F9F9F9;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    
+}
+footer div{
+    display: flex;
+    align-items: center;
+    line-height: 30px;
+    font-size: 15px;
 }
 
-@media (max-width: 858px) {
-    .checkbtn{
-        display: block;
+footer a{
+    color: #F9F9F9;
+    text-decoration: underline;
+    padding: 7px;
+    padding-top: 5px;
+    border-radius: 5px;
 
-    }
-
-    ul{
-        position: fixed;
-        width: 100%;
-        height: 100vh;
-        background: #5e0b15;
-        top: 120px;
-        left: -100%;
-        text-align: center;
-        transition: all .5s;
-        z-index: 1;
-    }
-
-    nav ul li{
-        display: block;
-        margin: 50px;
-        line-height: 30px;
-    }
-    nav ul li a{
-        font-size: 20px;
-    }
-    a:hover, a:active{
-        background: none;
-        color: #000;
-    }
-    #check:checked ~ ul{
-        left: 0;
-    }
 }
+footer a:hover{
+    transition: all .5s;
+    background-color: #5e0b15;
+}
+
+footer img{
+    width: 30px;
+    margin: 10px;
+}
+
+
+
+
 
 .slider-wrapper{
     position: relative;
@@ -120,7 +116,7 @@ a.active, a:hover{
     top: 50%;
     height: 50px;
     width: 50px;
-    color: #f4f1de;
+    color: #F9F9F9;
     border: none;
     outline: none;
     background: #000;
@@ -178,7 +174,7 @@ section{
     margin-top: 20px;
     justify-content: center;
     min-height: 100vh;
-    background: #f4f1de;
+    background: #F9F9F9;
 }
 
 .photos{
@@ -233,6 +229,105 @@ section{
     bottom: -10px;
 }
 
+.project-box{
+    display: flex;
+    width: 100%;
+    padding-bottom: 10vh;
+    /* height: 85vh; */
+    background: #F9F9F9;
+}
+
+.project-box a{
+    padding: 7px;
+    border-radius: 5px;
+    background-color: #90323d;
+    color: #F9F9F9;
+    /* text-decoration: underline; */
+}
+
+.project-box a:hover{
+    background-color: #5e0b15;
+    transition: all .5s;
+
+}
+
+.project-photo{
+    background: #F9F9F9;
+    width: 50%;
+    /* height: 100%; */
+}
+.project-photo img{
+    display: block;
+    margin: auto;
+    margin-top: 100px;
+}
+
+.project-text{
+    padding: 90px; 
+    padding-top: 110px; 
+    /* align-items: center; */
+    width: 50%;
+    /* height: 85vh; */
+    background: #F9F9F9;
+}
+.project-text h2{
+    border-bottom: 2px solid #000;
+    padding-bottom: 2px;
+    margin-bottom: 6px;
+}
+
+.prof-box{
+    background: #90323d;
+    height: 85vh;
+    display: flex;
+    width: 100%;
+}
+
+.index{
+    background: #90323d;
+}
+
+.prof_picture{
+    background: #F9F9F9;
+    width: 40%;
+    height: 100%;
+    border-bottom-right-radius: 50%;
+    border-top-right-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.prof_picture img{
+    width: 60%;
+    border-radius: 50%;
+}
+
+.prof_picture img:hover{
+    transition: all .5s;
+    width: 63%;
+}
+
+.prof_text{
+    width: 60%;
+    background: #90323d;
+    padding: 70px;
+    color: #F9F9F9;
+    display: flex;
+    align-items: center;
+}
+
+.prof_text a{
+    color: #F9F9F9;
+    text-decoration: underline;
+}
+
+.prof_text a:hover{
+    color: #5e0b15;
+    transition: all .5s;
+}
+
+
+
 @media (max-width: 1023px){
     .slider-wrapper .slide-button{
         display: none!important;
@@ -249,5 +344,80 @@ section{
 
     .slider-scrollbar .scrollbar-thumb{
         width: 20%;
+    }
+}
+
+@media only screen and (max-width: 952px){
+    label.name{
+        font-size: 30px;
+        padding-left: 50px;
+
+    }
+    nav ul li a{
+        font-size: 16px;
+    }
+    .project-box{
+        display: flex;
+        flex-flow: column;
+        padding: 0;  
+        padding-top: 100px;
+    }
+    .project-photo{
+        width: auto;
+        order: 2;
+    }
+    .project-photo img{
+        margin-top: 0;
+        margin-bottom: 0;
+    }
+    .project-text{
+        width: auto;
+        order: 1;
+        padding: 0;
+        padding-left: 11%;
+        padding-bottom: 10px;
+    }
+    footer{
+        display: block;
+        margin-top: 20px;
+    }
+
+
+    
+
+}
+
+@media (max-width: 858px) {
+    .checkbtn{
+        display: block;
+
+    }
+
+    ul{
+        position: fixed;
+        width: 100%;
+        height: 100vh;
+        background: #5e0b15;
+        top: 120px;
+        left: -100%;
+        text-align: center;
+        transition: all .5s;
+        z-index: 1;
+    }
+
+    nav ul li{
+        display: block;
+        margin: 50px;
+        line-height: 30px;
+    }
+    nav ul li a{
+        font-size: 20px;
+    }
+    nav ul li a:hover, nav ul li a:active{
+        background: none;
+        color: #000;
+    }
+    #check:checked ~ ul{
+        left: 0;
     }
 }
