--- a/opmaak.css
+++ b/opmaak.css
@@ -240,6 +240,7 @@ section{
 .project-box a{
     padding: 7px;
     border-radius: 5px;
+    /* margin-bottom: 10px; */
     background-color: #90323d;
     color: #F9F9F9;
     /* text-decoration: underline; */
@@ -375,11 +376,35 @@ section{
         order: 1;
         padding: 0;
         padding-left: 11%;
+        padding-right: 8%;
         padding-bottom: 10px;
     }
     footer{
-        display: block;
+        display: flex;
         margin-top: 20px;
+        align-content: center;
+        /* padding-left: 20%; */
+        flex-wrap: wrap;
+    }
+
+    .prof-box{
+        display: block;
+        height: auto;
+    }
+
+    .prof_picture{
+        width: 100%;
+        border-radius: 0;
+        height: 40vh;
+    }
+
+    .prof_text{
+        padding: 10%;
+        width: 100%;
+    }
+    .prof_picture img{
+        height: 90%;
+        width: auto;
     }
 
 
@@ -398,7 +423,7 @@ section{
         width: 100%;
         height: 100vh;
         background: #5e0b15;
-        top: 120px;
+        top: 100px;
         left: -100%;
         text-align: center;
         transition: all .5s;
@@ -420,4 +445,12 @@ section{
     #check:checked ~ ul{
         left: 0;
     }
+}
+
+@media (max-width: 550px) {
+    label.name{
+        font-size: 20px;
+
+    }
+
 }
